package behavioral.observer.ca6;

public interface Observer {
    void update(int thoiGian,int countdown, int grade);
}
